トップページ表示変更

--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -20,39 +20,50 @@
         <div class="menu bar"></div>
         <div class="ui information container center aligned">
             <h1 class="ui header">tiscon insurance</h1>
-            <h2 class="bland-message">多彩なチカラが、広げる未来。</h2>
+
+                    <h2 class="bland-message">多彩なチカラが、広げる未来。</h2>
+
+            <div class="text-info">
+                <p>保険についてのお問い合わせ・ご相談は</p>
+            </div>
+            <div class="phone-info">
+                <p><span class="style-small">0120-</span><span class="style-big">000-000</span></p>
+            </div>
+            <div class="timework-info">
+                <span>受付時間</span><span>月～金 9：00～19：00<br>土日祝 9：00～18：00</span>
+            </div>
+
 
             <div class="index-block">
                 <div class="index-icon" style="border:solid 3px #4B610B;">
                     <img src="/img/icon_treat.png">
-                    <p class="index-text" style="top:40px;">★病気、ケガに備える</p>
-                    <a href="/action/order/accept?insuranceType=treat" class="index-button"
-                       style="top:90px; background-color: #4B610B;">
-                        申し込み
-                    </a>
+                    <p class="index-text" style="top:40px;">★病気やケガで入院したり、所定の手術を受けた場合などに給付金を受け取ることができる保険です。</p>
+                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+
                 </div>
 
                 <div class="index-icon" style="border:solid 3px #B40404;">
                     <img src="/img/icon_treatLady.png">
-                    <p class="index-text" style="top:10px;">★病気、ケガに備える</p>
-                    <p class="index-text" style="top:20px;">★女性特有の病気への特約つき</p>
-                    <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
-                       style="top:42px; background-color: #B40404;">
-                        申し込み
-                    </a>
+                    <p class="index-text" style="top:10px;">★病気、ケガに備える保険です。</p>
+                    <p class="index-text" style="top:20px;">★女性特有の病気に備えられます。</p>
+                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+
                 </div>
 
                 <div class="index-icon" style="border:solid 3px #0174DF;">
                     <img src="/img/icon_future.png">
-                    <p class="index-text" style="top:30px;">★がんに備える</p>
-                    <a href="/action/order/accept?insuranceType=future" class="index-button"
-                       style="top:80px; background-color: #0174DF;">
-                        申し込み
-                    </a>
+                    <p class="index-text" style="top:30px;">★がんでの入院や通院手術に備える保険です。</p>
+                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+
                 </div>
             </div>
 
-        </div>
+            <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
+               style="top:42px; background-color: #B40404;">
+                申し込み
+            </a>
+
+            </div>
 
     </div>
 </div>
