--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -57,11 +57,9 @@
 
                 </div>
             </div>
+            <button class="ui fluid teal button"> <a href="/action/order/accept?insuranceType=treatLady">申し込み</a></button>
 
-            <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
-               style="top:42px; background-color: #B40404;">
-                申し込み
-            </a>
+
 
             </div>
 
