--- a/src/main/resources/template/acceptance.html
+++ b/src/main/resources/template/acceptance.html
@@ -32,7 +32,7 @@
                 <div class="ui segment metrixir" style="width: 700px;margin: 30px;">
                     <h1 class="ui aligned header teal center">ご加入条件確認</h1>
 
-                    <form class="ui form" method="post" action="/action/order/inputUser">
+                    <form class="ui form" method="post" action="/action/order/inputEmail">
 
                         <div class="ui statement">
                             以下の事項は保険の引受判断のための重要事項であり、被保険者様は必ず事実を告知する必要があります。
@@ -63,7 +63,9 @@
                             <label>全ての加入条件を満たしていることを確認しました。</label>
                         </div>
 
-                        <button class="ui fluid teal button">次へ（個人情報の入力）</button>
+                        <button class="ui fluid teal button">次へ（個人情報の入力）
+                        </button>
+
                     </form>
                 </div>
             </div>
