--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -38,26 +38,32 @@
                 <div class="index-icon" style="border:solid 3px #4B610B;">
                     <img src="/img/icon_treat.png">
                     <p class="index-text" style="top:40px;">★病気やケガで入院したり、所定の手術を受けた場合などに給付金を受け取ることができる保険です。</p>
-                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+                    <p class="index-text" style="top:40px;">★ライフステージの変化にあわせて柔軟に保障を選べます。</p>
+                    <p class="index-text" style="top:40px;">価格：5,000円～</p>
 
                 </div>
 
                 <div class="index-icon" style="border:solid 3px #B40404;">
                     <img src="/img/icon_treatLady.png">
-                    <p class="index-text" style="top:10px;">★病気、ケガに備える保険です。</p>
-                    <p class="index-text" style="top:20px;">★女性特有の病気に備えられます。</p>
-                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+                    <p class="index-text" style="top:10px;">★気になる乳がん・子宮筋腫といった女性特有の病気による入院を手厚く一生涯保障する、女性のための医療保険です。</p>
+                    <p class="index-text" style="top:20px;">★入院前後の通院や、三大疾病にも手厚く備えられます。</p>
+                    <p class="index-text" style="top:40px;">価格：5,000円～</p>
 
                 </div>
 
                 <div class="index-icon" style="border:solid 3px #0174DF;">
                     <img src="/img/icon_future.png">
-                    <p class="index-text" style="top:30px;">★がんでの入院や通院手術に備える保険です。</p>
-                    <p class="index-text" style="top:40px;">価格：1,000円～</p>
+                    <p class="index-text" style="top:30px;">★診断から再発まで、現在のがん治療に合わせて幅広く備えられるがん保険です。</p>
+                    <p class="index-text" style="top:30px;">★治療に伴う外見ケアやがんの痛みを和らげる緩和ケアにも備えられます。</p>
+                    <p class="index-text" style="top:40px;">価格：6,000円～</p>
 
                 </div>
             </div>
-            <button class="ui fluid teal button"> <a href="/action/order/accept?insuranceType=treatLady">申し込み</a></button>
+            <button class="ui fluid teal button">
+                <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
+                                                    style="top:42px; background-color: #B40404;">
+                申し込み
+            </a></button>
 
 
 
