メールアドレス登録画面にボタンを追加しました。

--- a/src/main/resources/template/email.html
+++ b/src/main/resources/template/email.html
@@ -114,9 +114,13 @@
                                         onclick="form.action='/action/order/backToAccept';return true">戻る
                                 </button>
                             </div>
-                            <div class="eight wide column right aligned">
-                                <button class="ui teal button angle right icon">次へ（お勤め先情報の入力）</button>
+                            <div class="eight wide column center aligned">
+                                <button type='submit' name='actionType' value='mail' class="ui teal button angle center icon">このまま登録</button>
                             </div>
+                            <div class="eight wide column right aligned">
+                                <button type='submit' name='actionType' value='phone' class="ui teal button angle right icon">電話で相談</button>
+                            </div>
+
                         </div>
                     </form>
                 </div>
