--- a/src/main/resources/template/select.html
+++ b/src/main/resources/template/select.html
@@ -54,7 +54,7 @@
 
                     <p class="index-text" style="top:40px;">★病気、ケガに備える</p>
 
-                    <a href="/action/order/accept?insuranceType=treat" class="index-button"
+                    <a href="/action/order/inputUser" class="index-button"
 
                        style="top:90px; background-color: #4B610B;">
 
@@ -74,7 +74,7 @@
 
                     <p class="index-text" style="top:20px;">★女性特有の病気への特約つき</p>
 
-                    <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
+                    <a href="/action/order/inputUser" class="index-button"
 
                        style="top:42px; background-color: #B40404;">
 
@@ -92,7 +92,7 @@
 
                     <p class="index-text" style="top:30px;">★がんに備える</p>
 
-                    <a href="/action/order/accept?insuranceType=future" class="index-button"
+                    <a href="/action/order/inputUser" class="index-button"
 
                        style="top:80px; background-color: #0174DF;">
 
